{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 179,
  "lineage": "427c6376-5775-a751-517d-81c247d27ff5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "Inbound-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-05-28T20:31:20.788-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.0.0.0/27"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/inbound-rule",
            "log_config": [],
            "name": "inbound-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/gws-scep-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/inbound-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gws-scep-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "Outbound-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-28T20:31:20.651-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/outbound-1",
            "log_config": [],
            "name": "outbound-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/gws-scep-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/outbound-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gws-scep-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ad-srv-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2016-dc-v20230510",
                    "labels": {
                      "environment": "gws-ad-srv"
                    },
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/ad-srv-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/ad-srv-01",
            "instance_id": "3023631454528184948",
            "label_fingerprint": "AVgukS_kt8c=",
            "labels": {
              "environment": "gws-ad-srv"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "praws0234:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCnQHJL86mlHDVMDEA4WwnGWws0k/DFgTfftaB12oTOvvRC5V5vDHkHwK9cGqBYcs6a2iwX4O4mk8NQNV0mQhwIQCfjJhqXk584dmhfATfsWmahLSUYVssnTheb4ZKayVSosPjt2ynIXBwnpyFySEsdTfoikwURTU2Yq/PVFgdcobtkCYKMMum2hOPcJS9j1T89cD3kFVFRmYo5PO9KDJdSoGB6/XVQSL6IBHecM5VsratHI2UQuT5mXl4J5ZJPoXU24jA41ZqOTnLNSVEACu59aUHadxqEuZIBFGKgypteJwR8D8YyMWCeMARSeN6FQnzozOlugigJaVdXVsF3Qck81R7z+CijxVi4OynYD8FKsgKhJFfl1QUfQDWutn7dVoJg1CQUJ+DZGy/n9vsB726sESU62+GgPxUSKMrWJFN [...]
            },
            "metadata_fingerprint": "nv-C6u4A-2w=",
            "name": "ad-srv-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.245.125",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/gws-scep-nw-01",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-snw-1",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/ad-srv-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ad",
              "scep-machine"
            ],
            "tags_fingerprint": "cRqdMI2oQSo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.gws-scep-nw-01",
            "google_compute_subnetwork.public-snw-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "scep-srv01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2016-dc-v20230510",
                    "labels": {
                      "environment": "gws-scep-srv"
                    },
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/scep-srv-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/scep-srv-01",
            "instance_id": "2196582372937933428",
            "label_fingerprint": "pL7Lw9vn79E=",
            "labels": {
              "environment": "gws-scep-srv"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "praws0234:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCnQHJL86mlHDVMDEA4WwnGWws0k/DFgTfftaB12oTOvvRC5V5vDHkHwK9cGqBYcs6a2iwX4O4mk8NQNV0mQhwIQCfjJhqXk584dmhfATfsWmahLSUYVssnTheb4ZKayVSosPjt2ynIXBwnpyFySEsdTfoikwURTU2Yq/PVFgdcobtkCYKMMum2hOPcJS9j1T89cD3kFVFRmYo5PO9KDJdSoGB6/XVQSL6IBHecM5VsratHI2UQuT5mXl4J5ZJPoXU24jA41ZqOTnLNSVEACu59aUHadxqEuZIBFGKgypteJwR8D8YyMWCeMARSeN6FQnzozOlugigJaVdXVsF3Qck81R7z+CijxVi4OynYD8FKsgKhJFfl1QUfQDWutn7dVoJg1CQUJ+DZGy/n9vsB726sESU62+GgPxUSKMrWJFN [...]
            },
            "metadata_fingerprint": "nv-C6u4A-2w=",
            "name": "scep-srv-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.210.156",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/gws-scep-nw-01",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-snw-1",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/scep-srv-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "scep-machine",
              "web"
            ],
            "tags_fingerprint": "1Bk5bmXHC0Y=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.gws-scep-nw-01",
            "google_compute_subnetwork.public-snw-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gws-scep-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-383907/global/networks/gws-scep-nw-01",
            "mtu": 1440,
            "name": "gws-scep-nw-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-383907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/gws-scep-nw-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-snw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-28T20:31:21.801-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-snw-1",
            "ip_cidr_range": "10.0.0.0/27",
            "name": "public-snw-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/gws-scep-nw-01",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-383907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/public-snw-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.gws-scep-nw-01"
          ]
        }
      ]
    }
  ]
}